[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heliosim"
version = "0.1.0"
description = "An open framework for simulating socio-technical energy systems under uncertainty"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "The HelioSim Authors"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/LyFX5/heliosim"
Repository = "https://github.com/LyFX5/heliosim"
